--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -16,7 +16,7 @@
                font-size: 14px;
                font-weight: 500;
                color:rgb(13, 13, 13);
-               background-color:#9d9da8;
+               background-color:#bbbbc5;
                padding: 4px 20px;
                border-radius: 18px
             
