--- a/scss/sections/_experience.scss
+++ b/scss/sections/_experience.scss
@@ -14,9 +14,16 @@
       font-size: 14px;
       font-weight: 500;
       color: rgb(13, 13, 13);
-      background-color: #aaaab4;
+      background-color: #cfcfd6;
       padding: 4px 20px;
       border-radius: 18px;
+    }
+
+    h1{
+      color: #4B5563;
+      font-size: 20px;
+      font-weight: 400;
+
     }
   }
   .wrapper{
