--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -12,3 +12,15 @@ footer{
 
     }
 }
+
+@media (prefers-color-scheme: dark){
+    footer{
+        background: #111827;
+
+        p{
+            color: #fff;
+        }
+
+
+    }
+}
