--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -17,15 +17,28 @@
       padding: 4px 20px;
       border-radius: 18px;
     }
-
+  }
+  .wrapper {
+    padding-top: 48px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 86px;
+    grid-row-gap: 48px;
+  }
 }
-    .wrapper {
-      padding-top: 48px;
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      grid-column-gap: 86px;
-      grid-row-gap: 48px;
-      
+
+@media (prefers-color-scheme: dark) {
+  #skills{
+    h1 {
+      color: #fff;
     }
+
+    .wrapper{
+      img{
+          color: #fff;
+      }
+    }
+
+  }
 }
