--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -59,6 +59,13 @@ main{
         .wrapper_right{
             position: relative;
 
+            .dark{
+                display:none;
+                position: absolute;
+                z-index: -1;
+                top: 40px;
+                left: 40px;
+            }
 
             .background{
                 position: absolute;
@@ -82,5 +89,20 @@ main{
     }
 }
 
+@media (prefers-color-scheme: dark){
+    
+    #intro{
+    
+        h1, p, i, h6{ 
+            color: #fff;
+
+
+        .dark{
+            
+        }
+    }
+    }
+
+}
 
 
