--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -35,9 +35,19 @@
 
     .card{
         display: flex;
-        align-items: flex-start;
-        padding: 48px 32px;
-        // box-shadow: 5px 5px 5px gray;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        box-shadow: 2px 6px 15px rgba(197, 195, 195, 0.426);
+        border-radius: 12px;
+        margin-top: 30px;
+
+        transition: all 0.5s ease;
+
+        &:hover{
+          transform: scale(1.03);
+        }
+        
     
 
         .card-right {
@@ -74,4 +84,18 @@
 
 }
 
+@media (prefers-color-scheme: dark){
+    #work{
+        .card{
+            background: #1F2937;
+           h1{
+            color: #fff;
+           }
 
+           p{
+            color: #6B7280;
+
+           }
+        }
+    }
+}
