--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -95,12 +95,14 @@ main{
     
         h1, p, i, h6{ 
             color: #fff;
+    }
 
-
+    .wrapper_right{
         .dark{
-            
+            display: block;
         }
     }
+
     }
 
 }
