--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -30,8 +30,9 @@
 
         .wrapper{
 
-            display: flex;
-            gap: 48px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            
 
 
             .card{
