--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,13 @@ button {
 footer {
   background: #F9FAFB;
   padding: 24px 532px;
+  display: grid;
+  place-content: center;
 }
 footer .footer {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  place-content: center;
   align-items: center;
   gap: 8px;
   justify-content: center;
@@ -79,6 +83,9 @@ header nav ul a {
   font-weight: 500;
   color: gray;
 }
+header nav ul a:hover {
+  color: #030712;
+}
 header nav ul div {
   display: flex;
   align-items: center;
@@ -92,11 +99,22 @@ header nav ul div button {
   border: none;
   background-color: black;
   color: #fff;
+  cursor: pointer;
 }
-header .toggle_menu {
+header nav ul div button:hover {
+  opacity: 0.8;
+}
+header nav .toggle_menu {
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
   display: none;
 }
 header .sidebar {
+  flex-direction: column;
+  background-color: #fff;
+  align-items: end;
+  width: 200px;
   display: none;
 }
 
@@ -107,11 +125,29 @@ header .sidebar {
   header .nav a, #intro .nav a, #skills .nav a, #work .nav a, #getintouch .nav a {
     color: #fff;
   }
-  header .nav button, #intro .nav button, #skills .nav button, #work .nav button, #getintouch .nav button {
+  header .nav ul a, #intro .nav ul a, #skills .nav ul a, #work .nav ul a, #getintouch .nav ul a {
+    color: grey;
+  }
+  header .nav ul a:hover, #intro .nav ul a:hover, #skills .nav ul a:hover, #work .nav ul a:hover, #getintouch .nav ul a:hover {
+    color: #fff;
+  }
+  header .nav ul button, #intro .nav ul button, #skills .nav ul button, #work .nav ul button, #getintouch .nav ul button {
     background: #111827;
   }
 }
-@medi;
+@media only screen and (max-width: 576px) {
+  header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header nav ul {
+    display: none;
+  }
+  header nav .toggle_menu {
+    display: flex;
+  }
+}
 main {
   padding-top: 68px;
 }
@@ -120,11 +156,9 @@ main #intro {
   padding-bottom: 96px;
 }
 main #intro .wrapper {
-  display: flex;
-  gap: 48px;
-}
-main #intro .wrapper .wrapper_left {
-  width: 768px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-column-gap: 48px;
 }
 main #intro .wrapper .wrapper_left h1 {
   font-size: 60px;
@@ -165,29 +199,40 @@ main #intro .wrapper .wrapper_left .social a {
 }
 main #intro .wrapper .wrapper_right {
   position: relative;
-}
-main #intro .wrapper .wrapper_right .dark {
-  display: none;
-  position: absolute;
-  z-index: -1;
-  top: 40px;
-  left: 40px;
+  z-index: 5;
 }
 main #intro .wrapper .wrapper_right .background {
   position: absolute;
   z-index: -1;
   top: 40px;
-  left: 40px;
+  right: 0px;
 }
 main #intro .wrapper .wrapper_right .frontend {
   transition: all 0.7s ease-in-out;
+  position: absolute;
+  top: 0;
+  right: 40px;
 }
 main #intro .wrapper .wrapper_right .frontend:hover {
-  transform: translateX(40px) translateY(40px) scale(0.99);
+  transform: translateX(40px) translateY(40px) scale(0.97);
 }
 
 @media (prefers-color-scheme: dark) {
-  #intro h1, #intro p, #intro i, #intro h6 {
+  #intro .frontend {
+    transition: all 0.7s ease-in-out;
+    position: absolute;
+    top: 0;
+    right: 40px;
+    box-shadow: 40px 40px grey;
+  }
+  #intro .frontend:hover {
+    box-shadow: 0px 0px gray;
+    transform: translateX(40px) translateY(40px) scale(0.97);
+  }
+  #intro h1,
+  #intro p,
+  #intro i,
+  #intro h6 {
     color: #fff;
   }
 }
@@ -212,7 +257,9 @@ main #intro .wrapper .wrapper_right .frontend:hover {
 }
 #about .container .wrapper {
   padding-top: 76px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-column-gap: 48px;
   gap: 48px;
 }
 #about .container .wrapper .wrapper_left {
@@ -288,10 +335,21 @@ main #intro .wrapper .wrapper_right .frontend:hover {
 #skills .wrapper {
   padding-top: 48px;
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 86px;
   grid-row-gap: 48px;
+}
+#skills .wrapper img {
+  padding: 10px 10px;
+  border-radius: 7px;
+  overflow: hidden;
+  box-shadow: 0px 0px 5px grey;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+#skills .wrapper img:hover {
+  transform: scale(1.1);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -328,10 +386,11 @@ main #intro .wrapper .wrapper_right .frontend:hover {
   font-weight: 400;
 }
 #experience .wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 1, minmax(400px, 1fr));
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 48px;
+  place-content: center;
 }
 #experience .wrapper .card {
   padding: 32px;
@@ -402,9 +461,9 @@ main #intro .wrapper .wrapper_right .frontend:hover {
   font-weight: 400;
 }
 .container .card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-column-gap: 48px;
   overflow: hidden;
   box-shadow: 2px 6px 15px rgba(197, 195, 195, 0.426);
   border-radius: 12px;
@@ -476,8 +535,8 @@ main #intro .wrapper .wrapper_right .frontend:hover {
   font-weight: 400;
 }
 #testimonials .container .wrapper {
-  display: flex;
-  gap: 48px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 #testimonials .container .wrapper .card {
   display: flex;
