--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,14 +1,20 @@
 footer{
     background: #F9FAFB;
     padding: 24px 532px;
+    display: grid;
+    place-content: center;
 
     .footer{
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        place-content: center;
         align-items: center;
         gap: 8px;
         justify-content: center;
         font-size: 14px;
         font-weight: 400;
+
+        
 
     }
 }
