--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -25,7 +25,9 @@
 
          .wrapper{
              padding-top: 76px;
-             display: flex;
+             display: grid;
+             grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+             grid-column-gap: 48px;
              gap: 48px;
 
              .wrapper_left{
