--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -34,9 +34,10 @@
       }
 
     .card{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        grid-column-gap: 48px;
         overflow: hidden;
         box-shadow: 2px 6px 15px rgba(197, 195, 195, 0.426);
         border-radius: 12px;
