--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -29,10 +29,10 @@
           }
 
         .wrapper{
-
+            padding-top: 48px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-            
+            gap: 48px;
 
 
             .card{
