--- a/scss/sections/_work.scss
+++ b/scss/sections/_work.scss
@@ -1,102 +1,104 @@
-#work{
-    padding: 96px 80px;
-}
+#work {
+  padding: 96px 80px;
 
-.container{
-
+  .container {
     display: flex;
     flex-direction: column;
     gap: 48px;
-    
+
     .title {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 16px;
-    
-        h4 {
-          font-size: 14px;
-          font-weight: 500;
-          color: rgb(13, 13, 13);
-          background-color: #d0d0d8;
-          padding: 4px 20px;
-          border-radius: 18px;
-        }
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
 
-        h1{
-            color: #4B5563;
-            font-size: 20px;
-            font-weight: 400;
-
-        }
+      h4 {
+        font-size: 14px;
+        font-weight: 500;
+        color: rgb(13, 13, 13);
+        background-color: #d0d0d8;
+        padding: 4px 20px;
+        border-radius: 18px;
       }
 
-    .card{
-
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-        grid-column-gap: 48px;
-        overflow: hidden;
-        box-shadow: 2px 6px 15px rgba(197, 195, 195, 0.426);
-        border-radius: 12px;
-        margin-top: 30px;
-
-        transition: all 0.5s ease;
-
-        &:hover{
-          transform: scale(1.03);
-        }
-        
-    
-
-        .card-right {
-            padding: 48px;
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            gap: 24px;
-
-            
-        }
-
-        .versions{
-            display: grid;
-            grid-template-columns: repeat(4, 0fr);
-            grid-template-rows: repeat(3, 0fr);
-            gap: 8px;
-
-            div {
-                display: flex;
-                background-color: #aaaab4;
-                align-items: center;
-                border-radius: 12px;
-                padding: 4px 20px;
-                text-align: center;
-
-                p{
-                    color: #fff;
-                }
-            }
-            
-        }
+      h1 {
+        color: #4b5563;
+        font-size: 20px;
+        font-weight: 400;
+      }
     }
 
+    .card {
+      display: flex;
+      align-items: center;
+    //   overflow: hidden;
+      box-shadow: 2px 6px 15px rgba(197, 195, 195, 0.426);
+      border-radius: 12px;
+      margin-top: 30px;
+
+      transition: all 0.5s ease;
+
+      &:hover {
+        transform: scale(1.03);
+      }
+
+      .card-right {
+        padding: 48px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: 24px;
+      }
+
+      .versions {
+        display: grid;
+        grid-template-columns: repeat(4, 0fr);
+        grid-template-rows: repeat(3, 0fr);
+        gap: 8px;
+
+        div {
+          display: flex;
+          background-color: #aaaab4;
+          align-items: center;
+          border-radius: 12px;
+          padding: 4px 20px;
+          text-align: center;
+
+          p {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+@media (prefers-color-scheme: dark) {
+  #work {
+    .card {
+      background: #1f2937;
+      h1 {
+        color: #fff;
+      }
+
+      p {
+        color: #6b7280;
+      }
+    }
+  }
 }
 
-@media (prefers-color-scheme: dark){
-    #work{
-        .card{
-            background: #1F2937;
-           h1{
-            color: #fff;
-           }
-
-           p{
-            color: #6B7280;
-
-           }
-        }
+@media only screen and (max-width: 576px) {
+  #work {
+    .wrapper {
+      .card {
+        
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 32px !important;
+      }
     }
+  }
 }
