--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,134 +1,118 @@
-header{
-    height: 80px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding-top: 16px;
-    backdrop-filter: blur(18px);
-    z-index: 9999;
-    
-    nav{
+header {
+  height: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding-top: 16px;
+  backdrop-filter: blur(18px);
+  z-index: 9999;
+  width: 100%;
+
+  .container {
+    position: relative;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    a {
+      font-size: 30px;
+      font-weight: 700;
+      color: black;
+    }
+
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+
+      p {
+        color: gray;
+      }
+
+      a {
+        font-size: 16px;
+        font-weight: 500;
+        color: gray;
+
+        &:hover {
+          color: #030712;
+        }
+      }
+
+      div {
         display: flex;
-        justify-content: space-around;
         align-items: center;
+        gap: 16px;
 
-        a{
-            font-size: 30px;
-            font-weight: 700;
-            color: black;
+        button {
+          padding: 6px 16px;
+          font-size: 16px;
+          font-weight: 500;
+          border-radius: 12px;
+          border: none;
+          background-color: black;
+          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            opacity: 0.8;
+          }
         }
-
-        ul{
-            display: flex;
-            align-items: center;
-            gap: 24px;
-
-            p{
-                color: gray;
-            }
-
-            a{
-                font-size: 16px;
-                font-weight: 500;
-                color: gray;
-
-                &:hover{
-                   color: #030712;
-                }
-            }
-
-            div{
-                display: flex;
-                align-items: center;
-                gap: 16px;
-
-                button{
-                    padding: 6px 16px;
-                    font-size: 16px;
-                    font-weight: 500;
-                    border-radius: 12px;
-                    border: none;
-                    background-color: black;
-                    color: #fff;
-                    cursor: pointer;
-
-                    &:hover{
-                        opacity:0.8;
-
-                    }
-                }
-
-                
-            }
-        }
-
-        .toggle_menu{
-            width: 36px;
-            height: 36px;
-            cursor: pointer;
-            display: none;
-
-        }
+      }
     }
 
-    
+    .toggle_menu {
+      width: 36px;
+      height: 36px;
+      cursor: pointer;
+      display: none;
+    }
+  }
+}
 
-    .sidebar{
-        // display: flex;
-        flex-direction: column;
-        background-color: #fff;
-        align-items: end;
-        width:200px;
+@media (prefers-color-scheme: dark) {
+  header,
+          #intro,
+          #skills,
+          #work,
+          #getintouch {
+    background-color: #030712;
+    .nav {
+      a {
+        color: #fff;
+      }
+      ul {
+        a {
+          color: grey;
+
+          &:hover {
+            color: #fff;
+          }
+        }
+        button {
+          background: #111827;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  header {
+    nav {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: baseline;
+      ul {
         display: none;
-
+      }
+      .toggle_menu {
+        display: flex;
+      }
     }
-}
-
-@media (prefers-color-scheme: dark){
-    header, #intro, #skills, #work, #getintouch{
-        background-color: #030712;
-        .nav{
-            a{
-                color: #fff;
-            }
-            ul{
-                a{
-
-                    color: grey;
-                    
-                    &:hover{
-                        color: #fff;
-                    }
-                }
-                button{
-                    background: #111827;
-    
-                }
-            }
-        }
-    }
-
-}
-
-@media only screen and (max-width: 576px){
-    
-    header {
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            ul {
-                display: none;
-            }
-            .toggle_menu{
-                display: flex;
-            }
-        }
-
-        
-    }
-
-    
+  }
 }
